removed option to hide overflow on odd sized resolutions as caused other overflow issues with the nav; issue is extreme edge case and will not program for it until it grows;

--- a/Styles/_nav.scss
+++ b/Styles/_nav.scss
@@ -269,7 +269,6 @@ nav {
             / 4fr minmax(110px, auto);
         background: none;
         overflow-y: unset;
-        overflow-x: hidden;
     }
 
     .nav-main {
